tests/test72.rael.exp
Error [tests/test72.rael:2:5]: Can't get numeric index of a value of such type
| log 12312 at 123
|     ^
