tests/test72.rael
:array { 1, 2, 3, 4 }
log 12312 at 123
